Added a Game controller
- It should be able to distinguish between who's turn it is, though it is a little janky

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
     padding-bottom: 30px;
 }
 
+.turn-order {
+    background-color: yellow;
+    text-align: center;
+    font-family: monospace;
+}
+
 html {
     background: black
 }
