--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,14 @@
     padding-bottom: 30px;
 }
 
-.turn-order {
+.turn-order, .setup-instructions {
     background-color: yellow;
     text-align: center;
     font-family: monospace;
+}
+
+.ship-checkbox {
+    background-color: aliceblue;
 }
 
 html {
